# CVC4.old-svn

./: .cproject  .project  AUTHORS  COPYING  Makefile  Makefile.am  Makefile.builds.in  README  README.arith-indexed-variables  README.arith-kinda-eager-splits  README.arith-tree-rewriter  README.arrays-clark  README.betterstats  README.boolean-terms  README.branch  README.bv3  README.cc  README.cc-memout  README.cc-redesign  README.cln-test  README.cnfstream  README.competitionarith  README.competitionpropagator  README.datatypes  README.datatypes-merge  README.incremental-work  README.integers  README.kind-backend  README.lianah-bv-core  README.lra-init  README.nonclausal-simplification-v2  README.options  README.options-gflags  README.post-smtcomp2011-cleanup  README.quantifiers  README.quantifiers2-trunkmerge  README.replay  README.sat-code-review  README.swig  README.theory-break-dependences  (+19 more)
src/compat/: Makefile.am  cvc3_compat.cpp  cvc3_compat.h
src/decision/: Makefile.am  decision_engine.cpp  decision_engine.h  decision_mode.h  decision_options.h  decision_strategy.h  justification_heuristic.cpp  justification_heuristic.h  justification_heuristic_exp.cpp  justification_heuristic_exp.h  options  options_handlers.h  relevancy.cpp  relevancy.h
src/main/: Makefile.am  driver.cpp  driver_portfolio.cpp  getopt.cpp  interactive_shell.cpp  interactive_shell.h  main.cpp  main.h  main_portfolio.cpp  options  options_handlers.h  portfolio.cpp  portfolio.h  usage.h  util.cpp
src/options/: Makefile.am  base_options  base_options_handlers.h  base_options_template.cpp  base_options_template.h  mkoptions  options  options.h  options.i  options_holder_template.h  options_template.cpp
src/parser/: Makefile.am  antlr_input.cpp  antlr_input.h  antlr_parser.cpp  antlr_parser.h  bounded_token_factory.cpp  input.cpp  input.h  memory_mapped_input_buffer.h  options  parser.cpp  parser.h  parser_builder.cpp  parser_builder.h  parser_exception.h  parser_state.cpp  parser_state.h  semantic_exception.cpp  semantic_exception.h  symbol_table.h  two_place_token_buffer.cpp  two_place_token_buffer.h
src/parser/cvc/: Cvc.g  Makefile.am  cvc_input.h
src/parser/smt/: Makefile.am  README  Smt.g  antlr_smt_parser.cpp  antlr_smt_parser.h  smt.cpp  smt.gr  smt.h  smt.lex  smt_input.cpp  smt_input.h  smt_parser.cpp  smt_parser.h
src/parser/smt2/: Makefile.am  Smt2.g  smt2.cpp  smt2.h
src/parser/tptp/: Makefile.am  Tptp.g  tptp.cpp  tptp.h
src/printer/: Makefile.am  dagification_visitor.cpp  options  printer.cpp
src/printer/ast/: ast_printer.cpp
src/printer/cvc/: cvc_printer.cpp
src/printer/smt/: smt_printer.cpp
src/printer/smt2/: smt2_printer.cpp
src/proof/: Makefile.am  options  proof.h  sat_proof.cpp  sat_proof.h
src/prop/: Makefile.am  cnf_stream.cpp  cnf_stream.h  options  options_handlers.h  prop_engine.cpp  prop_engine.h  propositional_query.cpp  propositional_query.h  sat.cpp  sat.h  sat_module.cpp  sat_module.h  sat_solver.h  theory_proxy.cpp  theory_proxy.h
src/prop/bvminisat/: Makefile.am  bvminisat.cpp  bvminisat.h
src/prop/bvpicosat/: Makefile.in
src/prop/cryptominisat/: Makefile.in
src/prop/minisat/: minisat.cpp  minisat.h
src/smt/: Makefile.am  boolean_terms.cpp  options  options.h  options_handlers.h  simplification_mode.cpp  simplification_mode.h  smt_engine.cpp  smt_engine.h  smt_options_template.cpp
src/theory/arith/: Makefile.am  arith_constants.h  arith_pivot_rule.cpp  arith_pivot_rule.h  arith_priority_queue.cpp  arith_prop_manager.h  arith_propagation_mode.cpp  arith_propagation_mode.h  arith_propagator.cpp  arith_propagator.h  arith_rewriter.cpp  arith_rewriter.h  arith_simp.h  arith_static_learner.cpp  arith_static_learner.h  arith_unate_lemma_mode.cpp  arith_unate_lemma_mode.h  arith_utilities.h  arithvar_set.h  atom_database.cpp  basic.h  congruence_manager.h  delta_rational.h  difference_manager.h  dio_solver.cpp  dio_solver.h  disjoint_set_forest.h  kinds  linked_tableau.cpp  linked_tableau.h  next_arith_rewriter.cpp  next_arith_rewriter.h  normal.h  normal_form.cpp  normal_form.h  options  options_handlers.h  ordered_bounds_list.h  ordered_set.h  partial_model.cpp  (+20 more)
src/theory/arrays/: Makefile.am  array_info.cpp  array_info.h  kinds  options  theory_arrays.cpp  theory_arrays.h  theory_arrays_instantiator.cpp  theory_arrays_instantiator.h  theory_arrays_model.cpp  theory_arrays_model.h  theory_arrays_rewriter.h  theory_arrays_type_rules.h  union_find.h
src/theory/booleans/: Makefile.am  circuit_propagator.cpp  circuit_propagator.h  options  theory_bool.cpp  theory_bool.h  theory_bool_type_rules.h
src/theory/builtin/: Makefile.am  kinds  options  theory_builtin.cpp  theory_builtin.h  theory_builtin_rewriter.h  theory_builtin_type_rules.h
src/theory/bv/: Makefile.am  bitblast_strategies.cpp  bitblast_strategies.h  bitblaster.cpp  bv_equality_engine.cpp  bv_equality_engine.h  bv_equality_engine_types.h  bv_sat.cpp  bv_sat.h  bv_solver_types.cpp  bv_solver_types.h  bv_subtheory.h  bv_subtheory_bitblast.cpp  bv_subtheory_eq.h  cd_list_collection.h  cd_set_collection.h  equality_engine.h  kinds  options  slice_manager.h  slicer.cpp  slicer.h  theory_bv.cpp  theory_bv.h  theory_bv_rewrite_rules.h  theory_bv_rewrite_rules_arith.h  theory_bv_rewrite_rules_constant_evaluation.h  theory_bv_rewrite_rules_normalization.h  theory_bv_rewrite_rules_operator_elimination.h  theory_bv_rewrite_rules_simplification.h  theory_bv_rewriter.cpp  theory_bv_rewriter.h  theory_bv_type_rules.h  theory_bv_utils.h  watch_manager.h
src/theory/datatypes/: Makefile.am  datatypes_rewriter.h  explanation_manager.h  kinds  options  theory_datatypes.cpp  theory_datatypes.h  theory_datatypes_candidate_generator.h  theory_datatypes_instantiator.cpp  theory_datatypes_instantiator.h  theory_datatypes_type_rules.h  type_enumerator.h  union_find.h
src/theory/definitions/: Makefile.am  kinds  theory_definitions.cpp  theory_definitions.h  theory_definitions_rewriter.h  theory_definitions_type_rules.h
src/theory/quantifiers/: Makefile.am  Makefile.in  first_order_model.cpp  kinds  (+31 more)
(+943 files in other folders)
